# django-s3-file-field

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  MANIFEST.in  Pipfile  README.md  biome.jsonc  build_js.py  docker-compose.yml  multi_npm_builder.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: renovate.json5
.github/workflows/: ci.yml  nodejs.yml  pythonpackage.yml  pythonpublish.yml  release.yml
client/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.widget.js
client/src/: S3FileInput.ts  api.ts  bundle.ts  client.ts  constants.ts  index.ts  style.scss  uploader.ts  widget.ts
django/: .gitignore  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
django-s3-file-field-client/: package-lock.json  package.json  tsconfig.lib.json  webpack.config.js
django-s3-file-field-client/src/: client.ts
django/core/: admin.py  models.py  serializers.py  views.py  widgets.py
django/core/migrations/: 0001_add_blob_model.py
django/core/static/s3fileinput/: aws-sdk-2.566.0.js  aws-sdk-2.566.0.min.js
django/core/templates/widgets/: s3fileinput.html
django/joist/: admin.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
django/joist/migrations/: 0001_add_blob_model.py  0002_blob_r2.py
django/joist/templates/: base.html
django/joist/templates/blob/: detail.html  index.html  new.html
django/s3widget/: .gitignore  apps.py  models.py  package-lock.json  package.json  tsconfig.json  urls.py  views.py  webpack.config.js  widgets.py
django/s3widget/js/: S3FileInput.ts  constants.ts  index.js  index.ts  style.scss  uploader.ts
django/s3widget/static/s3fileinput/: aws-sdk-2.566.0.js  aws-sdk-2.566.0.min.js  s3fileinput.js
django/s3widget/templates/s3fileinput/: s3adminfileinput.html  s3fileinput.html
django/s3widget/web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
django/s3widget/web/src/: S3FileInput.ts  constants.ts  index.ts  style.scss  uploader.ts
docker/minio/: Dockerfile  README.md
example/: .gitignore  README.md  docker-compose.yml  manage.py  requirements.txt
example-client/: .eslintignore  package-lock.json  package.json  tsconfig.json
example-client/src/: App.vue  http.ts
example-client/src/components/: JoistUpload.vue
example/blobs/: models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
example/blobs/migrations/: 0001_add_blob_model.py  0002_blob_r2.py
example/blobs/templates/blob/: detail.html  index.html  new.html
example/s3ff_example/: settings.py  urls.py  wsgi.py
example/s3ff_example/core/: admin.py  models.py  rest.py  views.py
example/s3ff_example/core/migrations/: 0001_initial.py
example/s3ff_example/core/templates/: base.html
example/s3ff_example/core/templates/core/: resource_confirm_delete.html  resource_form.html  resource_list.html
example/tests/: conftest.py  fuzzy.py  test_multipart_upload.py
javascript-client/: README.md  package-lock.json  package.json  tsconfig.json
javascript-client/src/: client.ts
joist/: __init__.py  apps.py  boto.py  checks.py  configuration.py  fields.py  models.py  settings.py  signals.py  urls.py  views.py  widgets.py
python-client/: README.md  pyproject.toml  setup.py  tox.ini
python-client/s3_file_field_client/: __init__.py
s3_file_field/: __init__.py  _multipart.py  _multipart_boto3.py  _multipart_minio.py  _multipart_s3.py  _registry.py  _sizes.py  apps.py  boto.py  checks.py  configuration.py  constants.py  fields.py  fixtures.py  forms.py  ninja.py  pydantic.py  rest_framework.py  settings.py  signals.py  testing.py  urls.py  version.py  views.py  widgets.py
s3_file_field/templates/joist/: s3adminfileinput.html  s3fileinput.html
s3_file_field/templates/s3_file_field/widgets/: file_input.html  image_input.html
stubs/minio/: __init__.pyi  api.pyi  datatypes.pyi  error.pyi  sse.pyi
terraform/: example.tf
terraform/modules/storage/: base.tf  blobs.tf  upload.tf  user.tf
tests/: conftest.py  fuzzy.py  settings.py  sizes.py  storage.py  test_checks.py  test_fields.py  test_fixtures.py  test_forms.py  test_multipart.py  test_ninja.py  test_pydantic.py  test_registry.py  test_rest_framework.py  test_serializer.py  test_serializers.py  test_test_client.py  test_views.py
tests/functional/: mypy.ini  test_multipart_upload.py
tests/functional/blobs/: admin.py  settings.py  urls.py  views.py
tests/functional/blobs/migrations/: 0001_add_blob_model.py
tests/functional/test_app/: forms.py  models.py  settings.py
tests/functional/tests/: conftest.py  test_multipart_upload.py  test_upload.py
tests/test_app/: drf.py  forms.py  models.py  ninja.py  rest.py  settings.py  urls.py
tests/type/: settings.py
tests/unit/: conftest.py  storage.py  test_fields.py  test_multipart.py  test_registry.py  test_serializer.py  test_serializers.py
vue/: .env.development  package.json
vue/public/: index.html
vue/src/components/: JoistUpload.vue
widget/: .parcelrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
widget/src/: App.svelte  S3FileInput.ts  S3ImageInput.ts  _variables.scss  constants.ts  imagestyle.scss  imagewidget.ts  main.ts  style.scss  svelte.d.ts  widget.ts
