[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-s3-file-field"
description = "A Django library for uploading files directly to AWS S3 or MinIO Storage from HTTP clients."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
maintainers = [{ name = "Kitware, Inc.", email = "kitware@kitware.com" }]
keywords = [
  "django",
  "django-widget",
  "resonant",
  "kitware-resonant",
  "minio",
  "s3",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 4",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
]
dependencies = [
  "django>=4.2",
  "djangorestframework",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/kitware-resonant/django-s3-file-field"
"Bug Reports" = "https://github.com/kitware-resonant/django-s3-file-field/issues"

[project.entry-points.pytest11]
s3_file_field = "s3_file_field.fixtures"

[project.optional-dependencies]
s3 = [
  # 1.14 has some breaking renames which are adopted here
  "django-storages[s3]>=1.14",
  "boto3",
]
minio = [
  # This is the first version which supports minio>=7, so make dependency resolution easier
  "django-minio-storage>=0.5",
  "minio>=7",
]
pydantic = [
  "pydantic>=2",
]
pytest = [
  # The "fixtures.py" module (containing the "pytest" requirement) is only loaded
  # automatically via entry point by consumers who already have "pytest" installed, so
  # "pytest" isn't actually a hard requirement.
  "pytest",
]

[dependency-groups]
dev = [
  "tox",
  "tox-uv",
]
lint = [
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "pep8-naming",
]
format = [
  "black",
  "isort",
]
type = [
  "mypy",
  "boto3-stubs[s3]",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs",
  "types-requests",
  "types-factory-boy",
]
test = [
  "factory-boy",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-mock",
  "requests",
]

[tool.hatch.build]
only-include = [
  "s3_file_field",
]
artifacts = [
  "s3_file_field/static",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "s3_file_field",
  # The builder needs to run again when installing the sdist, although it will no-op
  "multi_npm_builder.py",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "multi_npm_builder.multi_npm_builder"
ensured-targets = [
  "s3_file_field/static/s3_file_field/widget.js",
  "s3_file_field/static/s3_file_field/widget.css",
]

[[tool.hatch.build.hooks.jupyter-builder.build-kwargs.projects]]
build_cmd = "build"
path = "javascript-client"
source_dir = "javascript-client"
build_dir = "javascript-client/dist"

[[tool.hatch.build.hooks.jupyter-builder.build-kwargs.projects]]
build_cmd = "build"
path = "widget"
source_dir = "widget"
build_dir = "s3_file_field/static/s3_file_field"

[tool.hatch.version]
source = "vcs"

[tool.uv.workspace]
members = ["python-client"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.coverage.run]
source_pkgs = [
  "s3_file_field",
]

[tool.coverage.paths]
source = [
  "s3_file_field/",
  ".tox/**/site-packages/s3_file_field/",
]

[tool.django-stubs]
django_settings_module = "test_app.settings"

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

# These test utilities are local, but are loaded as absolute imports
known_local_folder = [
  "fuzzy",
  "test_app",
]

[tool.mypy]
files = [
  "s3_file_field",
  "tests",
  "python-client/s3_file_field_client",
]
check_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]
mypy_path = [
  "$MYPY_CONFIG_FILE_DIR/stubs",
  # Use the same pythonpath for MyPy as for Pytest
  "tests",
]
# Don't allow "tests/" to be accidently imported as a namespace package,
# as that allows multiple possible import paths
namespace_packages = false

[[tool.mypy.overrides]]
module = [
  "storages.backends.s3",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow test utilities to be imported without adding the root directory to the pythonpath,
# which would cause the local "s3_file_field" module to shadow the install.
pythonpath = ["tests"]
# Configure pythonpath ourselves, not based on manage.py
django_find_project = false
addopts = [
  # Test utilies are imported absolutely from the pythonpath,
  # so use the Pytest-reccomended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  # Disable the entry point loading of "s3_file_field" fixtures, to support coverage.
  # See the comment with "pytest_plugins" in "conftest.py" for full details.
  "-p", "no:s3_file_field",
  "--cov",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
  # Django 3.2 emites some deprecation warnings
  "ignore::DeprecationWarning:django",
  # Python 3.12 deprecrates "datetime.datetime.utcnow"
  'ignore:datetime\.datetime\.utcnow:DeprecationWarning:botocore',
  'ignore:datetime\.datetime\.utcnow:DeprecationWarning:minio',
]
DJANGO_SETTINGS_MODULE = "test_app.settings"
