[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[metadata]
description-file = README.md
license_file = LICENSE

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:widget/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"
